# lpm-validation

./: .gitignore  QUICKSTART.md  README.md  TESTING.md  TEST_STRUCTURE.md  TEST_SUMMARY.md  config.example.yaml  config_example.yaml  pseudocode_oo_validation_extraction.md  pseudocode_validation_extraction.md  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  setup.sh
examples/: visualization_demo.ipynb
lpm_validation/: __init__.py  collector.py  config.py  csv_exporter.py  discovery.py  main.py  metadata_extractor.py  results_extractor.py  results_matcher.py  s3_data_source.py  simulation_record.py  simulation_record_set.py  summary_report.py
lpm_validation/visualization/: __init__.py  base.py  comparison.py  loaders.py  scatter.py
tests/: __init__.py  conftest.py
tests/fixtures/: Force_Series.csv  __init__.py  config_test.yaml  export_force_series.csv  geometry.json  geometry_morph.json  results.json
tests/integration/: __init__.py  test_collector.py  test_end_to_end.py
tests/unit/: __init__.py  test_config.py  test_csv_exporter.py  test_metadata_extractor.py  test_results_extractor.py  test_s3_data_source.py  test_simulation_record.py  test_simulation_record_set.py  test_summary_report.py  test_visualization.py
tests/unit/visualization/: __init__.py  test_colors.py  test_loaders.py  test_scatter.py
